<resources>
    <string name="app_name">Learn english simply</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="empty_input_field">Pole nie może być puste</string>
    <string name="no_result">Brak wyników</string>
    <string name="error_try_again">Wystąpił błąd, spróbuj ponownie</string>
    <string name="connection_error">Brak połączenia z internetem</string>
    <string name="youtube_connection_error">Wystąpił błąd podczas próby połączenia z serwisem Youtube</string>
    <string name="press_again_to_exit">Wciśnij przycisk ponownie, aby wyjść z aplikacji</string>
    <string name="start_welcome">Witaj</string>
    <string name="start_info">Użyj paska nawigacyjnego w lewym górnym rogu, aby rozpocząć korzystanie z aplikacji.</string>
    <string name="drawer_menu_start">Start</string>
    <string name="drawer_menu_lessons">Lekcje</string>
    <string name="drawer_menu_video">Wideo</string>
    <string name="drawer_menu_cards">Fiszki</string>
    <string name="drawer_menu_exercises">Ćwiczenia</string>
    <string name="drawer_menu_dictionary">Słownik</string>
    <string name="drawer_menu_translate">Tłumacz</string>
    <string name="drawer_menu_settings">Ustawienia</string>
    <string name="drawer_menu_info">Informacje</string>
    <string name="exercises_bad_answer">Błędna odpowiedź</string>
    <string name="exercises_correct_answer">Poprawna odpowiedź</string>
    <string name="exercises_skip">Pomiń ćwiczenie</string>
    <string name="dictionary_hint">Wprowadź słowo po angielsku</string>
    <string name="voice_input">Wprowadzanie głosowe</string>
    <string name="change_language">Wybór języka</string>
    <string name="translation_choose_language">Wybierz sposób tłumaczenia</string>
    <string name="translation_in_progress">Tłumaczenie…</string>
    <string name="voice_input_error">Błąd inicjalizacji wprowadzania głosowego</string>
    <string name="translate">Tłumacz</string>
    <string name="write_text_to_translate">Wprowadź tekst do przetłumaczenia</string>
    <string-array name="translations_options">
        <item>angielski-polski</item>
        <item>polski-angielski</item>
    </string-array>
    <string-array name="translations_options_values">
        <item>en-pl</item>
        <item>pl-en</item>
    </string-array>
    <string-array name="text_lessons_names">
        <item>Lekcja 1\nZaimki osobowe</item>
        <item>Lekcja 2\nLiczba mnoga rzeczowników cz1</item>
        <item>Lekcja 3\nLiczba mnoga rzeczowników cz2</item>
        <item>Lekcja 4\nOkreślanie własności i przynależności</item>
        <item>Lekcja 5\nPrzypadki w języku angielskim</item>
    </string-array>
    <string-array name="text_lessons_names_files">
        <item>lekcja1.html</item>
        <item>lekcja2.html</item>
        <item>lekcja3.html</item>
        <item>lekcja4.html</item>
        <item>lekcja5.html</item>
    </string-array>
    <string-array name="youtube_lessons_names">
        <item>Lekcja 1\nGramatyka - czasowniki</item>
        <item>Lekcja 2\nGramatyka - rzeczowniki</item>
        <item>Lekcja 3\nGramatyka - przedimki</item>
        <item>Lekcja 4\nGramatyka - przymiotniki</item>
        <item>Lekcja 5\nGramatyka - przyslowki</item>
        <item>Lekcja 6\nGramatyka - czasowniki modalne</item>
        <item>Lekcja 7\nGramatyka - zaimki</item>
        <item>Lekcja 8\nGramatyka - zaimki nieokreślone</item>
        <item>Lekcja 9\nGramatyka - dopełniacz saksoński</item>
        <item>Lekcja 10\nGramatyka - liczebniki</item>
    </string-array>
    <string-array name="youtube_lessons_names_files">
        <item>QzLkC8s4lU0</item>
        <item>qmhf3sLMKS4</item>
        <item>y34-TMVZIIw</item>
        <item>zbjA4YkN_B0</item>
        <item>26FChHC902U</item>
        <item>p133Fgyfxs0</item>
        <item>lGFuK71q78k</item>
        <item>w5krG-1Z5Q8</item>
        <item>0xUhNkbdnKw</item>
        <item>CDzuIuNls04</item>
    </string-array>
    <string-array name="cards_names">
        <item>aligator</item>
        <item>antylopa</item>
        <item>badminton</item>
        <item>badminton</item>
        <item>baran</item>
        <item>bawół</item>
        <item>bejzbol</item>
        <item>bieganie</item>
        <item>bilard</item>
        <item>bizon</item>
        <item>boks</item>
        <item>borsuk</item>
        <item>bóbr </item>
        <item>byk</item>
        <item>chomik</item>
        <item>ciele</item>
        <item>daniel</item>
        <item>delfin</item>
        <item>delfin butlonosy</item>
        <item>diabeł tasmański</item>
        <item>dingo (pies)</item>
        <item>dromader (wielbłąd) </item>
        <item>dzik</item>
        <item>dziobak</item>
        <item>dżudo</item>
        <item>fenek</item>
        <item>foka</item>
        <item>fretka</item>
        <item>gazela</item>
        <item>gepard</item>
        <item>hokej na lodzie</item>
        <item>kajakarstwo</item>
        <item>karate</item>
        <item>kolarstwo</item>
        <item>koszykówka</item>
        <item>kręgle</item>
        <item>kręgle</item>
        <item>łucznictwo</item>
        <item>łyżwiarstwo</item>
        <item>narciarstwo</item>
        <item>niedźwiedź czarny</item>
        <item>nosorożec</item>
        <item>nurkowanie ze sprzętem</item>
        <item>ocelot</item>
        <item>orangutan</item>
        <item>orka</item>
        <item>osioł</item>
        <item>owca</item>
        <item>pałanka</item>
        <item>pancernik</item>
        <item>panda</item>
        <item>panda</item>
        <item>pantera</item>
        <item>pawian</item>
        <item>pchnięcie kulą</item>
        <item>pies</item>
        <item>piłka nożna</item>
        <item>pływanie</item>
        <item>prosiak</item>
        <item>puma</item>
        <item>renifer</item>
        <item>ryś</item>
        <item>rzutki</item>
        <item>sarna</item>
        <item>serwal</item>
        <item>siatkówka</item>
        <item>skok w dal</item>
        <item>skoki narciarskie</item>
        <item>skunks</item>
        <item>słoń</item>
        <item>szczur</item>
        <item>szermierka</item>
        <item>szop pracz</item>
        <item>szympans</item>
        <item>szynszyla</item>
        <item>świnia</item>
        <item>świnka morska</item>
        <item>świstak</item>
        <item>tchórz</item>
        <item>tenis stołowy</item>
        <item>tygrys</item>
        <item>tygrysica</item>
        <item>nietoperz</item>
        <item>wędkarstwo</item>
        <item>wielbłąd</item>
        <item>wieloryb</item>
        <item>wiewiórka</item>
        <item>wilk</item>
        <item>windsurfing</item>
        <item>wół</item>
        <item>wspinaczka</item>
        <item>wydra</item>
        <item>wyścigi</item>
        <item>wyścigi konne</item>
        <item>zając hare   </item>
        <item>zebra</item>
        <item>żbik</item>
        <item>żyrafa</item>
        <item>biurko</item>
        <item>brama</item>
        <item>chodnik</item>
        <item>dach</item>
        <item>drzwi wejściowe</item>
        <item>dywan</item>
        <item>firanka</item>
        <item>fotel</item>
        <item>garaż</item>
        <item>garnek</item>
        <item>grzejnik</item>
        <item>jadalnia</item>
        <item>klucz</item>
        <item>kołdra</item>
        <item>kołdra/koc/itp.</item>
        <item>komin</item>
        <item>kominek</item>
        <item>komoda </item>
        <item>kran</item>
        <item>kredens</item>
        <item>krzesło</item>
        <item>kuchenka</item>
        <item>kuchnia</item>
        <item>lampka</item>
        <item>ława</item>
        <item>łazienka</item>
        <item>lodówka</item>
        <item>łóżko</item>
        <item>łyżka</item>
        <item>mikrofalówka</item>
        <item>miotła</item>
        <item>mydło</item>
        <item>nóż</item>
        <item>obraz</item>
        <item>odkurzacz</item>
        <item>okno</item>
        <item>pasta do zębów</item>
        <item>patelnia</item>
        <item>piekarnik</item>
        <item>piwnica</item>
        <item>płot</item>
        <item>podłoga</item>
        <item>poduszka na kanapie</item>
        <item>poduszka w łóżku</item>
        <item>pokój dzienny</item>
        <item>półka / regał</item>
        <item>prysznic</item>
        <item>przedpokój</item>
        <item>prześcieradło</item>
        <item>ręcznik</item>
        <item>robot kuchenny</item>
        <item>roślina</item>
        <item>schody</item>
        <item>ściana</item>
        <item>sofa</item>
        <item>stół</item>
        <item>stolik nocny</item>
        <item>strych</item>
        <item>sufit</item>
        <item>suszarka do włosów</item>
        <item>sypialnia</item>
        <item>szafa</item>
        <item>szampon</item>
        <item>szczoteczka od zębów</item>
        <item>szklanka</item>
        <item>talerz</item>
        <item>umywalka</item>
        <item>odtwarzacz video,cd, dvd</item>
        <item>wanna</item>
        <item>toaleta</item>
        <item>widelec</item>
        <item>wieża</item>
        <item>zamek w drzwiach</item>
        <item>żelazko</item>
        <item>zlew</item>
        <item>zmywarka</item>
        <item>zwykły dywan</item>
    </string-array>
</resources>