<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_menu_start"
            android:icon="@drawable/ic_start"
            android:title="@string/drawer_menu_start" />
        <item
            android:id="@+id/drawer_menu_lessons"
            android:icon="@drawable/ic_lessons"
            android:title="@string/drawer_menu_lessons" />
        <item
            android:id="@+id/drawer_menu_video"
            android:icon="@drawable/ic_video"
            android:title="@string/drawer_menu_video" />
        <item
            android:id="@+id/drawer_menu_cards"
            android:icon="@drawable/ic_cards"
            android:title="@string/drawer_menu_cards" />
        <item
            android:id="@+id/drawer_menu_exercises"
            android:icon="@drawable/ic_cards"
            android:title="@string/drawer_menu_exercises" />
        <item
            android:id="@+id/drawer_menu_dictionary"
            android:icon="@drawable/ic_dictionary"
            android:title="@string/drawer_menu_dictionary" />
        <item
            android:id="@+id/drawer_menu_translate"
            android:icon="@drawable/ic_translate"
            android:title="@string/drawer_menu_translate" />
        <item
            android:id="@+id/drawer_menu_info"
            android:icon="@drawable/ic_info"
            android:title="@string/drawer_menu_info" />
    </group>

</menu>
